[gd_scene load_steps=18 format=2]

[ext_resource path="res://art/sprite pngs/wizard_side_01.png" type="Texture" id=1]
[ext_resource path="res://art/sprite pngs/wizard_up_01.png" type="Texture" id=2]
[ext_resource path="res://art/sprite pngs/wizard_up_02.png" type="Texture" id=3]
[ext_resource path="res://art/sprite pngs/wizard_up_03.png" type="Texture" id=4]
[ext_resource path="res://art/sprite pngs/wizard_down_00.png" type="Texture" id=5]
[ext_resource path="res://art/sprite pngs/wizard_side_02.png" type="Texture" id=6]
[ext_resource path="res://art/sprite pngs/wizard_down_01.png" type="Texture" id=7]
[ext_resource path="res://art/sprite pngs/wizard_side_00.png" type="Texture" id=8]
[ext_resource path="res://art/sprite pngs/wizard_side_03.png" type="Texture" id=9]
[ext_resource path="res://art/sprite pngs/wizard_down_03.png" type="Texture" id=10]
[ext_resource path="res://art/sprite pngs/wizard_down_02.png" type="Texture" id=11]
[ext_resource path="res://art/sprite pngs/wizard_up_00.png" type="Texture" id=12]
[ext_resource path="res://characters/Player.gd" type="Script" id=13]
[ext_resource path="res://key_scenes/health_bar/HealthBar.tscn" type="PackedScene" id=14]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 11 ), ExtResource( 10 ) ],
"loop": true,
"name": "down",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 9 ) ],
"loop": true,
"name": "side",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "up",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 14.0
height = 0.0

[sub_resource type="CapsuleShape2D" id=3]
radius = 16.0
height = 14.0

[node name="Player" type="KinematicBody2D" groups=["player"]]
collision_layer = 73
script = ExtResource( 13 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "down"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 2 )

[node name="AttackCooldown" type="Timer" parent="." groups=["player"]]
one_shot = true

[node name="SpellOriginUp" type="Position2D" parent="."]
position = Vector2( 0, -33 )

[node name="SpellOriginDown" type="Position2D" parent="."]
position = Vector2( 0, 30 )

[node name="SpellOriginRight" type="Position2D" parent="."]
position = Vector2( 26, 8 )

[node name="SpellOriginLeft" type="Position2D" parent="."]
position = Vector2( -26, 8 )

[node name="HealthBar" parent="." instance=ExtResource( 14 )]
anchor_bottom = 0.431
margin_top = -28.0
rect_scale = Vector2( 1.1, 1.1 )

[node name="PlayerArea2D" type="Area2D" parent="." groups=["player"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerArea2D"]
shape = SubResource( 3 )
